# robomechanics_person_following

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindCaffe.cmake
scripts/: ssd_dest_track_video.sh
src/controller/: ._dy_controller.h  dy_controller.h
src/helper/: bounding_box.cpp  bounding_box.h
src/ssd/: detect.cpp
src/tracker/: tracker_manager.cpp  tracker_manager.h
